@@ -297,7 +297,7 @@ in a ClassCastException.
     <value>
 <![CDATA[
 //CastExpression[Type/ReferenceType/ClassOrInterfaceType[@Image !=
-"Object"]]//PrimaryExpression
+"Object"]]/PrimaryExpression
 [
  PrimaryPrefix/Name[ends-with(@Image, '.toArray')]
  and
