@@ -1,6 +1,7 @@
 ????? ??, 2013 - 5.0.3:
 
 Fixed bug  968: Issues with JUnit4 @Test annotation with expected exception (Thanks to Yiannis Paschalidis)
+Fixed bug  975: false positive in ClassCastExceptionWithToArray
 Fixed bug  976: UselessStringValueOf wrong when appending character arrays
 Fixed bug  977: MisplacedNullCheck makes false positives
 Fixed bug  984: Cyclomatic complexity should treat constructors like methods
